feat: Move to Java 21